--- a/app/src/main/res/layout/fragment_medical_info.xml
+++ b/app/src/main/res/layout/fragment_medical_info.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/lightGray"
-        android:padding="24dp"
+        android:padding="12dp"
         tools:context=".MedicalInfoFragment">
 
 
@@ -21,11 +21,14 @@
             android:layout_height="wrap_content"
             android:background="@color/gray"
             android:elevation="5dp"
+            android:padding="8dp"
             android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.32999998">
 
             <TextView
                 android:id="@+id/bmi_tv"
