--- a/app/src/main/res/menu/medical_info_menu.xml
+++ b/app/src/main/res/menu/medical_info_menu.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/medicalInfo_search"
-        android:icon="@drawable/ic_search"
-        android:iconTint="@color/white"
-        android:title="@string/search"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="ifRoom"
-        tools:targetApi="o" />
+        android:title="@string/sign_out"
+        app:showAsAction="never" />
 
 </menu>
