--- a/app/src/main/res/navigation/savior_nav.xml
+++ b/app/src/main/res/navigation/savior_nav.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_requestsFragment_to_medicalInfoFragment"
             app:destination="@id/medicalInfoFragment" />
+        <action
+            android:id="@+id/action_requestsFragment_to_mainActivity2"
+            app:destination="@id/mainActivity2" />
     </fragment>
     <fragment
         android:id="@+id/requestDetailesFragment"
@@ -44,4 +47,9 @@
             app:argType="string"
             app:nullable="true" />
     </fragment>
+    <activity
+        android:id="@+id/mainActivity2"
+        android:name="com.afares.emergency.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
 </navigation>
