--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -77,13 +77,13 @@
                     android:background="@drawable/custom_input"
                     android:ems="10"
                     android:fontFamily="@font/nahdi"
-                    android:hint="@string/phone"
+                    android:hint="@string/hint_phone"
                     android:inputType="phone"
                     android:paddingStart="24dp"
                     android:paddingEnd="24dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ssn_et" />
+                    app:layout_constraintStart_toEndOf="@+id/code_tv"
+                    app:layout_constraintTop_toBottomOf="@+id/phone_tv" />
 
                 <EditText
                     android:id="@+id/phone_closePerson_et"
@@ -93,15 +93,15 @@
                     android:background="@drawable/custom_input"
                     android:ems="10"
                     android:fontFamily="@font/nahdi"
-                    android:hint="@string/phone_close_person"
+                    android:hint="@string/hint_phone"
                     android:inputType="phone"
                     android:paddingStart="24dp"
                     android:paddingEnd="24dp"
                     android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/personal_phone_et" />
+                    app:layout_constraintStart_toEndOf="@+id/code2_tv"
+                    app:layout_constraintTop_toBottomOf="@+id/personal_phone_tv" />
 
                 <Spinner
                     android:id="@+id/hospital_spinner"
@@ -151,6 +151,50 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/civil_defense_spinner" />
 
+                <ImageView
+                    android:id="@+id/flag_imageView"
+                    android:layout_width="40dp"
+                    android:layout_height="50dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/code_tv"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/code_tv"
+                    app:srcCompat="@drawable/flag_ksa" />
+
+                <TextView
+                    android:id="@+id/code_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="4dp"
+                    android:fontFamily="@font/nahdi"
+                    android:text="+966"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/personal_phone_et"
+                    app:layout_constraintStart_toEndOf="@+id/flag_imageView"
+                    app:layout_constraintTop_toTopOf="@+id/personal_phone_et" />
+
+                <ImageView
+                    android:id="@+id/flag2_imageView"
+                    android:layout_width="40dp"
+                    android:layout_height="50dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/code2_tv"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/code2_tv"
+                    app:srcCompat="@drawable/flag_ksa" />
+
+                <TextView
+                    android:id="@+id/code2_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="4dp"
+                    android:fontFamily="@font/nahdi"
+                    android:text="+966"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/phone_closePerson_et"
+                    app:layout_constraintStart_toEndOf="@+id/flag_imageView"
+                    app:layout_constraintTop_toTopOf="@+id/phone_closePerson_et" />
+
                 <ProgressBar
                     android:id="@+id/progressBar_signUp"
                     style="?android:attr/progressBarStyle"
@@ -162,6 +206,30 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/phone_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/nahdi"
+                    android:text="@string/phone"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/ssn_et" />
+
+                <TextView
+                    android:id="@+id/personal_phone_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/nahdi"
+                    android:text="@string/phone_close_person"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/personal_phone_et" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
