--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -97,11 +97,11 @@
                     android:inputType="phone"
                     android:paddingStart="24dp"
                     android:paddingEnd="24dp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/code2_tv"
-                    app:layout_constraintTop_toBottomOf="@+id/personal_phone_tv" />
+                    app:layout_constraintTop_toBottomOf="@+id/close_phone_tv" />
 
                 <Spinner
                     android:id="@+id/hospital_spinner"
@@ -177,6 +177,7 @@
                     android:id="@+id/flag2_imageView"
                     android:layout_width="40dp"
                     android:layout_height="50dp"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/code2_tv"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/code2_tv"
@@ -191,6 +192,7 @@
                     android:text="+966"
                     android:textColor="@color/black"
                     android:textSize="18sp"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/phone_closePerson_et"
                     app:layout_constraintStart_toEndOf="@+id/flag_imageView"
                     app:layout_constraintTop_toTopOf="@+id/phone_closePerson_et" />
@@ -220,7 +222,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/ssn_et" />
 
                 <TextView
-                    android:id="@+id/personal_phone_tv"
+                    android:id="@+id/close_phone_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -228,6 +230,7 @@
                     android:text="@string/phone_close_person"
                     android:textColor="@color/black"
                     android:textSize="18sp"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/personal_phone_et" />
 
