--- a/app/src/main/res/layout/fragment_medical_history.xml
+++ b/app/src/main/res/layout/fragment_medical_history.xml
@@ -99,8 +99,9 @@
 
             <Spinner
                 android:id="@+id/blood_type_spinner"
-                android:layout_width="130dp"
+                android:layout_width="0dp"
                 android:layout_height="60dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/custom_input"
                 android:entries="@array/blood_type"
@@ -108,6 +109,8 @@
                 android:gravity="end|center"
                 android:paddingHorizontal="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/Gender_spinner"
                 app:layout_constraintTop_toBottomOf="@+id/blood_type_tv" />
 
             <TextView
@@ -125,7 +128,7 @@
 
             <Spinner
                 android:id="@+id/Gender_spinner"
-                android:layout_width="130dp"
+                android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/custom_input"
@@ -140,8 +143,9 @@
 
             <EditText
                 android:id="@+id/height_et"
-                android:layout_width="130dp"
+                android:layout_width="0dp"
                 android:layout_height="60dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/custom_input"
                 android:ems="10"
@@ -152,11 +156,13 @@
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/weight_et"
                 app:layout_constraintTop_toBottomOf="@+id/blood_type_spinner" />
 
             <EditText
                 android:id="@+id/weight_et"
-                android:layout_width="130dp"
+                android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/custom_input"
@@ -174,13 +180,15 @@
 
             <EditText
                 android:id="@+id/age_et"
-                android:layout_width="130dp"
+                android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/custom_input"
-                android:fontFamily="@font/nahdi"
-                android:hint="@string/age"
-                android:inputType="number"
+                android:hint="@string/date_of_birth"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
