--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -23,24 +23,6 @@
             tools:layout_editor_absoluteY="24dp">
 
             <Button
-                android:id="@+id/signup_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:background="#00FFFFFF"
-                android:fontFamily="@font/nahdi"
-                android:text="@string/sign_up"
-                android:textColor="@color/dark"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/login_btn"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/login_btn"
-                app:layout_constraintTop_toBottomOf="@+id/login_btn"
-                app:layout_constraintVertical_bias="0.89" />
-
-            <Button
                 android:id="@+id/login_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -98,6 +80,7 @@
                 android:id="@+id/phone_et"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/custom_input"
                 android:ems="10"
@@ -108,7 +91,7 @@
                 android:paddingEnd="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/code_tv"
+                app:layout_constraintStart_toEndOf="@+id/flag_imageView"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -116,23 +99,10 @@
                 android:id="@+id/flag_imageView"
                 android:layout_width="40dp"
                 android:layout_height="50dp"
-                app:layout_constraintBottom_toBottomOf="@+id/code_tv"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/code_tv"
-                app:srcCompat="@drawable/flag_ksa" />
-
-            <TextView
-                android:id="@+id/code_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="4dp"
-                android:fontFamily="@font/nahdi"
-                android:text="+966"
-                android:textColor="@color/black"
-                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/phone_et"
-                app:layout_constraintStart_toEndOf="@+id/flag_imageView"
-                app:layout_constraintTop_toTopOf="@+id/phone_et" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/phone_et"
+                app:srcCompat="@drawable/flag_ksa" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -208,7 +178,7 @@
                 app:layout_constraintWidth_percent="0.3" />
 
             <ProgressBar
-                android:id="@+id/progressBar2"
+                android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
